# c_notes

./: .gitignore  c_learn.sln
CMake_notes/: CMakeLists.txt  CMakeSettings.json
CMake_notes/CMake_notes/: CMakeLists.txt  cross_vaidation.h  main.cpp  timer.h
c_learn/: Makefile  a.out  c_learn.vcxproj  c_learn.vcxproj.filters  cross_vaidation.h  main.cpp  template.h
